feat(api): splited health endpoint into normal helath and deep health checks
